# AES67

./: .gitignore  .gitmodules  IMPLEMENTATION_SUMMARY.md  README.md  _codeql_detected_source_root  agents.md
.github/: copilot-instructions.md
.run/: West Run.run.xml
.west/: config
FPGA/: FPGA.bdf  FPGA.out.sdc  FPGA.qsf  FPGA.sdc  FPGA_assignment_defaults.qdf  I2S_IN.vhd  async_fifo.vhd  audio_clock_controller.bsf  audio_clock_controller.vhd  audioclks.bsf  audioclks.mif  audioclks.ppf  audioclks.qip  audioclks.v  audioclks_bb.v  clk_by_x.vhd  ethernet_packet_aggregator.bsf  ethernet_packet_aggregator.vhd  fmc_ethernet_client copy.vhd  fmc_ethernet_client.bsf  fmc_ethernet_client.vhd  i2s_in.bsf  miirmii.qsys  miirmii.sopcinfo  pll_systemclocks.bsf  pll_systemclocks.ppf  pll_systemclocks.qip  pll_systemclocks.vhd  ptp_timer.vhd  ptp_timestamper.vhd  sample_counter.bsf  sample_counter.qip  sample_counter.v  sample_counter_bb.v  spi_ethernet_client.bsf  spi_ethernet_client.vhd  stp1.stp  udp_audio_packet.bsf  udp_audio_packet.vhd
dev_scripts/: a.out  package.json  (+6 more)
soc_firmware/app/: CMakeLists.txt  Kconfig  PTP_TIMESTAMP_DEMO.c  PTP_TIMESTAMP_USAGE.md  app.overlay  prj.conf
soc_firmware/app/drivers/: CMakeLists.txt  Kconfig
soc_firmware/app/drivers/eth_fmc_basic/: CMakeLists.txt  Kconfig.fmc_basic  eth_fmc_basic.c
soc_firmware/app/drivers/eth_spi_basic/: Kconfig.spi_basic  eth_spi_basic.c  eth_spi_basic.h
soc_firmware/app/dts/bindings/: vendor-prefixes.txt
soc_firmware/app/dts/bindings/ethernet/: vendor,spi-ethernet.yaml
soc_firmware/app/src/: main.c
(+1 files in other folders)
